kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estacionamento-backend
  namespace: main
  labels: { app: estacionamento-backend }
spec:
  replicas: 2
  selector: { matchLabels: { app: estacionamento-backend } }
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata: { labels: { app: estacionamento-backend } }
    spec:
      containers:
      - name: backend
        image: fpeiter/backend-main:latest
        ports: [ { containerPort: 8080 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: estacionamento-backend
  namespace: main
spec:
  type: ClusterIP
  selector: { app: estacionamento-backend }
  ports: [ { port: 80, targetPort: 8080 } ]
