kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estacionamento-frontend
  namespace: main
  labels:
    app: estacionamento-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estacionamento-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: estacionamento-frontend
    spec:
      hostNetwork: true 
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: frontend
          image: fpeiter/frontend-main:latest
          ports:
            - containerPort: 80
              hostPort: 80                     
---
apiVersion: v1
kind: Service
metadata:
  name: estacionamento-frontend
  namespace: main
spec:
  type: LoadBalancer
  selector:
    app: estacionamento-frontend
  ports:
    - port: 80
      targetPort: 80
