kubernetes/networkpolicy.yaml
# 1. Default deny: bloqueia todo tráfego de entrada por padrão
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: main
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---

# 2. Permitir backend acessar o PostgreSQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-postgres
  namespace: main
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: estacionamento-backend
      ports:
        - protocol: TCP
          port: 5432

---

# 3. Permitir frontend acessar o backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: main
spec:
  podSelector:
    matchLabels:
      app: estacionamento-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: estacionamento-frontend
      ports:
        - protocol: TCP
          port: 8080
---

# 4. Permite todo o Ingress ao front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-to-frontend
  namespace: main
spec:
  podSelector:
    matchLabels:
      app: estacionamento-frontend
  policyTypes:
    - Ingress
  ingress:
